@@ -20,12 +20,18 @@
 ##' @return Nothing is returned from these functions as they are invoked for their side-effects.
 ##' @examples
 ##' spdl::setup("exampleDemo", "warn")
+##' # and  spdl::init("warn")  and  spdl::log("warn")  are shortcuts
 ##' spdl::info("Not seen as level 'info' below 'warn'")
 ##' spdl::warn("This warning message is seen")
 ##' spdl::set_level("info")
 ##' spdl::info("Now this informational message is seen too")
 ##' spdl::info("Calls use fmtlib::fmt {} as we can see {}", "under the hood", 42L)
 setup       <- function(name = "default", level = "warn") RcppSpdlog::log_setup(name, level)
+
+##' @rdname setup
+init        <- function(                  level = "warn") RcppSpdlog::log_setup("R", level)
+##' @rdname setup
+log         <- function(                  level = "warn") RcppSpdlog::log_setup("R", level)
 
 ##' @rdname setup
 filesetup   <- function(s, name = "default", level = "warn") RcppSpdlog::log_filesetup(s, name, level)
